apps/colcare/app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colcare-app
  namespace: colcare
spec:
  replicas: 2
  selector:
    matchLabels:
      app: colcare-app
  template:
    metadata:
      labels:
        app: colcare-app
    spec:
      containers:
        - name: app
          image: ghcr.io/harris-consult/colcare-app:latest
          imagePullPolicy: Always
          # command: ["node", "dist/src/server.js"]
          ports:
            - containerPort: 80
