apps/colcare/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: colcare-app
  namespace: colcare
spec:
  selector:
    app: colcare-app
  ports:
    - name: http
      port: 80
      targetPort: 5173
