apps/colcare/app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colcare-app-ingress
  namespace: colcare
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.colcare.harrisconsult.org
        - app.mycolcare.com
      secretName: colcare-app-tls
  rules:
    - host: app.colcare.harrisconsult.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: colcare-app
                port:
                  number: 80
    - host: app.mycolcare.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: colcare-app
                port:
                  number: 80
